# synapse

./: .editorconfig  .gitflow  .gitignore  .npmignore  .npmrc  ACHIEVEMENTS_SUMMARY.md  ANIMATIONS_AND_STORYBOOK_SUMMARY.md  CLAUDE.md  COMPLETE_ECOSYSTEM_SUMMARY.md  COMPLETE_TEST.js  COMPREHENSIVE_TEST_REPORT.md  CONTRIBUTING.md  CRITICAL_ZERO_DEPENDENCY_FIX_REPORT.md  DEPLOYMENT_STATUS.md  DEPLOYMENT_SUMMARY.md  ECOSYSTEM_SUMMARY.md  FEATURE_WALKTHROUGH.md  FINAL_SUMMARY.md  FINAL_WALKTHROUGH_RESULTS.md  FRAMEWORK_FIXES_SUMMARY.md  GEMINI.md  GETTING_STARTED.md  GITHUB_ISSUES_CLEANUP_REPORT.md  GITHUB_ISSUES_TDD_IMPLEMENTATION.md  GITHUB_SECRETS.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_UPDATE.md  INTELLIGENT_RULE_SYSTEM_COMPLETE.md  MIGRATION_GUIDE.md  MILESTONE_REPORT.md  Makefile  PUBLISHING_STATUS_REPORT.md  QUANTUM_COMPILATION.md  README.md  RECURSION_BUG_FIX_REPORT.md  RUST_IMPLEMENTATION_COMPLETE.md  STATUS.md  SYNAPSE_DEMO.md  TODO.md  (+36 more)
.claude/: settings.local.json
.github/: BRANCH_PROTECTION.md  CODEOWNERS  PULL_REQUEST_TEMPLATE.md  SECURITY.md  SECURITY_SETUP.md  SUPPORT.md  dependabot.yml  pull_request_template.md  security-policy.yml
.husky/: pre-commit
dashboard/: index.html
docs/: GIT_INTEGRATION_SUMMARY.md  GIT_WORKFLOW.md  index.html
examples/: README.md  basic-usage.ts
gh-pages-deploy/: index.html
quantum-output/: quantum-test1.ts  quantum-test2.ts  quantum-test3.ts
rust-compiler/: Cargo.toml
rust-compiler/src/: config.rs  errors.rs  lib.rs  main.rs  quantum.rs
scripts/: build-all.sh  build-node.sh  (+4 more)
(+114 files in other folders)
