[package]
name = "synapse-compiler"
version = "0.1.0"
edition = "2021"
authors = ["Synapse Framework Team"]
description = "High-performance TypeScript compiler and bundler for Synapse Framework"
license = "MIT"
repository = "https://github.com/synapse-framework/synapse"

[lib]
name = "synapse_compiler"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "synapse-compiler"
path = "src/main.rs"

[dependencies]
# Core dependencies
tokio = { version = "1.42", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
console = "0.15"

# Quantum compilation dependencies
rayon = "1.8"
num_cpus = "1.16"

# Optional WASM support (for future browser compilation)
wasm-bindgen = { version = "0.2", optional = true }

[dev-dependencies]
tempfile = "3.6"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true

[features]
default = []
wasm = ["wasm-bindgen"]
